--- a/步骤.md
+++ b/步骤.md
@@ -14,6 +14,8 @@ vue2.0 会自动打开浏览器
 cnpm install时 如果报node版本npm版本问题直接删除原来的重新 老老实实使用 npm install 下载
 
 -------使用 vue2.0脚手架
+>vue-cli2.0 的 webpack 模板
+可以直接修改本机的IP地址进行访问
 
 2.下载 vue2.0路由
    cnpm install vue-router --save
